# collide

./: .env  .env.example  .gitignore  .gitlab-ci.yml  README.md  collide_kick_off.txt  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
backend/: requirements.txt  (+4 more)
backend/app/: .gitignore  mypy.ini  prestart.sh  pyproject.toml
backend/app/app/: backend_pre_start.py  initial_data.py  main.py  s3_instructions.ipynb  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/core/: config.py  security.py  users.py
backend/app/app/crud/: __init__.py  base.py  crud_user.py  memgraph_make_graph.py  memgraph_make_graph_with_table_pull.py
backend/app/app/data/: Registration_ManuallyEntered_GovernmentInstExport.csv  bloc.json  dictionary_registrations_dictionnaire_enregistrements.xlsx  sample_graph3.json
backend/app/app/data/cabinet_xml/: cabinet_78.xml  cabinet_79.xml  cabinet_81.xml  cabinet_82.xml  cabinet_83.xml  cabinet_85.xml  cabinet_86.xml  cabinet_87.xml  cabinet_89.xml  cabinet_91.xml  cabinet_92.xml  cabinet_93.xml  cabinet_94.xml  cabinet_95.xml
backend/app/app/database/: 00_initial_inserts.py  01_insert_sources.py  01_mp_list.py  02_insert_sector_industry.py  03_insert_topic.py  04_ingest_corp_info.py  05_ingest_lobby_com_gov.py  06_ingest_lobby_com_corp.py  07_ingest_lobby_com_com.py  08_ingest_ab_lobby_comm.py  08_ingest_contrib.py  08_ingest_lobby_reg_funding.py  09_ingest_bills.py  09_ingest_contrib.py  10_ingest_votes.py  11_compute_bill_diffs.py  DirectoryHandler.py  ab_ingest_lobby_comm.py  buffered_logger.py  check_for_duplicates.py  common_func.py  corp_info.py  diff.py  fix_duplicates.py  fix_funcs.py  fix_memberships_001.py  fix_orgs_001.py  fix_orgs_002.py  fix_orgs_003.py  fix_people.py  fix_people_000_common.py  fix_people_001.py  fix_people_002.py  fix_people_003.py  fix_people_004.py  fix_people_004_3.py  fix_people_005.py  fix_people_006.py  graph_build_common.py  ingest_bill_diffs.py  (+27 more)
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py  sql_alchemy_user_database_sync.py
backend/app/app/gqlmodels/: __init__.py  graph.py
backend/app/app/models/: __init__.py  item.py  token.py  user.py
backend/app/app/schemas/: __init__.py  emails.py  graph.py  user.py
backend/app/app/sqlmodels/: sqlmodel_build.py
backend/app/app/web_scrape/: DirectoryHandler.py  main.py  scrape_corpcan_corp_numbers.py  scrape_elections_funding.py  scrape_ised_corp_directors.py  scrape_lobby_reg_comms.py  scrape_ourcommons_bills_detailed.py  scrape_ourcommons_bills_summary.py  scrape_ourcommons_cabinet.py  scrape_ourcommons_member.py  scrape_ourcommons_members_xml_fetch.py  scrape_ourcommons_votes_detailed.py  scrape_ourcommons_votes_summary.py
(+1585 files in other folders)
