[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["bwelwood <benwelwood@gmail.com><kelly><james>"]

[tool.poetry.dependencies]
python = "^3.10"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^4.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
raven = "^6.10.0"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
boto3 = "^1.26.8"
unidecode = "^1.3.6"
fastapi-mail = "^1.2.4"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
Jinja2 = "^3.1.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.2.1"}
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
gqlalchemy = "^1.3.3"
psycopg2-binary = "^2.9.5"
sqlmodel = "^0.0.8"

[tool.poetry.group.dev.dependencies]
mypy-extensions = "^0.4.3"
ipython = "^8.6.0"
typing-extensions = "^4.4.0"
epc = "^0.0.5"
importmagic = "^0.1.7"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
ipykernel = "^6.17.1"
mypy = "^0.991"
isort = "^4.3.21"
autoflake = "^1.3.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

